external-crates/move/crates/move-compiler/tests/move_check/parser/function_return_type_missing.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_return_type_missing.move:3:14
  │
3 │     fun f(): { }
  │              ^
  │              │
  │              Unexpected '{'
  │              Expected a type name

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_return_type_missing.move:3:14
  │
3 │     fun f(): { }
  │              ^
  │              │
  │              Unexpected '{'
  │              Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

